fixed aligning in header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	display: grid;
 	grid-template-rows: 58px;
-	grid-template-columns: 1fr 2fr;
+	grid-template-columns: 1fr 3fr;
 	align-items: center;
 	justify-content: center;
 	border-bottom: 1px solid black;
