--- a/src/components/ToggleButton.css
+++ b/src/components/ToggleButton.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+  justify-content: center;
+  justify-self: center;
 	margin: 10px;
 	height: 38px;
 	padding-top: 3px;
@@ -20,10 +21,10 @@ h4.switchLabel {
 }
 
 .toggleDiv {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 8px;
+  margin-top: -10px;
 }
 
 .toggleDiv input[type=checkbox]{
@@ -77,13 +78,11 @@ h4.switchLabel {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: center;
-		margin: -4px 0px 0px 0px;
+    justify-content: center;
+    justify-self: center;
+		margin: -10px 0px 0px 0px;
 		font-size: 16px;
 	}
-  .toggleDiv {
-    margin-top: 0px;
-  }
 }
 @media screen and (max-width: 500px) {
   .switchContainer {
@@ -92,5 +91,10 @@ h4.switchLabel {
   }
   h4.switchLabel {
     font-size: 10px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .switchContainer {
+    margin-top: -1px;
   }
 }
